test_regress/t/t_randc_oversize_bad.out
%Error: t/t_randc_oversize_bad.v:16:13: Member 'randomize' not found in class 'Cls'
                                      : ... note: In instance 't'
   16 |       r = c.randomize;
      |             ^~~~~~~~~
%Error: Exiting due to
